# doodle

./: CLAUDE.md  HANDOVER.md  PRD.md  PROJECT_SNAPSHOT.md  components.json  index.html  mytodo.md  package-lock.json  package.json  vite.config.ts
.claude/: launch.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: ai.rs  blocks.rs  completions.rs  items.rs  mod.rs  settings.rs  sync_md.rs
src/components/aichat/: AIChatWindow.tsx
src/components/panel/: BlockCardGrid.tsx  BlockDetailArea.tsx  BlockSidebar.tsx  PanelWindow.tsx  SettingsPage.tsx
src/components/theme/: ThemeProvider.tsx  themeConfig.ts
src/components/ui/: GlassPanel.tsx
src/components/widget/: AIInputBar.tsx  BlockCard.tsx  CalendarCell.tsx  CalendarHeader.tsx  MonthView.tsx  WidgetWindow.tsx
src/lib/: events.ts
src/store/: useAIStore.ts  useBlocksStore.ts  useItemsStore.ts  useSettingsStore.ts
src/types/: index.ts
