[package]
name = "ai-todo"
version = "0.1.0"
description = "Doodle - AI Todo List"
authors = ["you"]
edition = "2021"

[lib]
name = "ai_todo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
raw-window-handle = "0.6"
reqwest = { version = "0.13.4", features = ["json"] }
chrono = { version = "0.4.45", features = ["serde"] }
uuid = { version = "1.23.4", features = ["v4"] }
tokio = { version = "1.52.3", features = ["full"] }
